# hermes-a2a-plugin

./: .gitattributes  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  test.yml
DESIGN/: index.html
api/a2a_client/: index.html
api/bridge/: index.html
api/bridge_mcp/: index.html
api/reference/: index.html
api/schemas/: index.html
api/server/: index.html
architecture/: index.html
docs/: architecture.md  getting-started.md  index.md
docs/api/: reference.md
docs/guides/: configuration.md  development.md  opencode-integration.md  troubleshooting.md  usage.md
docs/research/: python-a2a-sdk.md
docs/stylesheets/: extra.css
getting-started/: index.html
guides/configuration/: index.html
guides/development/: index.html
guides/opencode-integration/: index.html
guides/troubleshooting/: index.html
guides/usage/: index.html
hermes_a2a_plugin/: __init__.py  a2a_client.py  bridge.py  bridge_mcp.py  plugin.yaml  schemas.py  server.py
research/python-a2a-sdk/: index.html
scripts/: gen_api_docs.py  generate_ai_docs.py
search/: search_index.json
tests/: test_a2a_client.py  test_bridge.py  test_plugin.py
