[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-a2a-plugin"
version = "0.1.0"
description = "A2A (Agent2Agent) protocol plugin for Hermes Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Alejandro Maisonnat"},
]
keywords = ["hermes", "a2a", "agent", "plugin", "opencode"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.22",
    "mkdocs-gen-files>=0.5",
]

[tool.setuptools.packages.find]
include = ["hermes_a2a_plugin*"]
